# patterns

./: .travis.yml  CMakeLists.txt
inc/: pimpl.h  singleton.h
src/pimpl/: pimpl.cpp  pimpl_main.cpp
src/singleton/: singleton.cpp  singleton_main.cpp
